Added some documentation and cleaned up some code